--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
-EMAIL_ID=gutkuisutkrisht@gmail.com
-PASSWORD=hiixylrzqgponlaa
-ADMIN_ID=gutkuisutkrisht@gmail.com
-ADMIN_PASSWORD=hiixylrzqgponlaa
+#EMAIL_ID=gutkuisutkrisht@gmail.com
+#PASSWORD=hiixylrzqgponlaa
+#ADMIN_ID=gutkuisutkrisht@gmail.com
+#ADMIN_PASSWORD=hiixylrzqgponlaa
+
+EMAIL_ID='sidhureddi7@gmail.com'
+PASSWORD='Sidhu@123'
+ADMIN_ID='sidhureddi7@gmail.com'
+ADMIN_PASSWORD='Sidhu@123'
