--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@
 #ADMIN_PASSWORD=hiixylrzqgponlaa
 
 EMAIL_ID='sidhureddi7@gmail.com'
-PASSWORD='Sidhu@123'
+PASSWORD=Sidhu@123
 ADMIN_ID='sidhureddi7@gmail.com'
-ADMIN_PASSWORD='Sidhu@123'
+ADMIN_PASSWORD=Sidhu@123
