--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 #ADMIN_ID=gutkuisutkrisht@gmail.com
 #ADMIN_PASSWORD=hiixylrzqgponlaa
 
-EMAIL_ID='sidhureddi7@gmail.com'
+EMAIL_ID=sidhureddi7@gmail.com
 PASSWORD=Sidhu@123
-ADMIN_ID='sidhureddi7@gmail.com'
+ADMIN_ID=sidhureddi7@gmail.com
 ADMIN_PASSWORD=Sidhu@123
